--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.8'
 
 services:
   app:
+    env_file:
+      - devcontainer.env
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
@@ -19,12 +21,16 @@ services:
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
   localstack:
+    env_file:
+      - devcontainer.env
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
     image: localstack/localstack
     ports:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559"  # external services port range
     environment:
+      - SERVICES=sqs,sns,s3
+      - AWS_DEFAULT_REGION=us-east-1
       - DEBUG=${DEBUG-}
       - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
       - DOCKER_HOST=unix:///var/run/docker.sock
