--- a/requirements.txt
+++ b/requirements.txt
@@ -14,28 +14,51 @@ cfgrib==0.9.10.3
     # via -r requirements.in
 click==8.1.3
     # via cfgrib
+contourpy==1.0.7
+    # via matplotlib
+cycler==0.11.0
+    # via matplotlib
 eccodes==1.5.0
     # via
     #   -r requirements.in
     #   cfgrib
 findlibs==0.0.2
     # via eccodes
+fonttools==4.38.0
+    # via matplotlib
+kiwisolver==1.4.4
+    # via matplotlib
+matplotlib==3.6.3
+    # via -r requirements.in
 numpy==1.24.1
     # via
     #   cfgrib
+    #   contourpy
     #   eccodes
+    #   matplotlib
     #   pandas
+    #   scipy
     #   xarray
 packaging==23.0
-    # via xarray
+    # via
+    #   matplotlib
+    #   xarray
 pandas==1.5.3
     # via xarray
+pillow==9.4.0
+    # via matplotlib
 pycparser==2.21
     # via cffi
+pyparsing==3.0.9
+    # via matplotlib
 python-dateutil==2.8.2
-    # via pandas
+    # via
+    #   matplotlib
+    #   pandas
 pytz==2022.7.1
     # via pandas
+scipy==1.10.0
+    # via -r requirements.in
 six==1.16.0
     # via python-dateutil
 xarray==2023.1.0
