--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,8 @@ packaging==23.0
     #   xarray
 pandas==1.5.3
     # via xarray
+picologging==0.9.1
+    # via -r requirements.in
 pillow==9.4.0
     # via matplotlib
 pycparser==2.21
